<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#abd3e4"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/load_logo"
        android:layout_width="140dp"
        android:layout_height="87dp"
        android:layout_below="@+id/load_margin"
        android:layout_marginLeft="110dp"
        android:layout_marginTop="60dp"
        android:src="@drawable/title_main_logo" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="100dp"
        android:gravity="center"
        android:orientation="vertical">

        <EditText
            android:id="@+id/user_email"
            android:layout_width="248dp"
            android:layout_height="48dp"
            android:layout_marginTop="12dp"
            android:backgroundTint="@android:color/white"
            android:drawableLeft="@drawable/icon_login_mail"
            android:drawablePadding="8dp"
            android:hint="ID"
            android:inputType="text"
            android:maxLength="20"
            android:singleLine="true"
            android:textColorHint="@android:color/white"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/user_psw"
            android:layout_width="248dp"
            android:layout_height="45dp"
            android:backgroundTint="@android:color/white"
            android:drawableLeft="@drawable/icon_login_pw"
            android:drawablePadding="8dp"
            android:hint="@string/hint_psw"
            android:inputType="textPassword"
            android:maxLength="20"
            android:password="true"
            android:singleLine="true"
            android:textColorHint="@android:color/white"
            android:textSize="14sp" />


        <Button
            android:id="@+id/user_confirm"
            android:layout_width="248dp"
            android:layout_height="41dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/login_btn_selector"
            android:text="@string/login_submit"
            android:textColor="#ffffff"
            android:textSize="17dp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/user_registration"
            android:layout_width="248dp"
            android:layout_height="41dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/login_btn_selector"
            android:text="@string/title_registration"
            android:textColor="#ffffff"
            android:textSize="17dp"
            android:textStyle="bold" />
    </LinearLayout>

    <Space
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="30dp"
        android:gravity="center_horizontal"
        android:text="도로교통연구원"
        android:textColor="@android:color/white"
        android:textSize="18sp" />

</LinearLayout>

