<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.neighbor.ex.tong.ui.fragment.GroupTongFragment">


    <com.neighbor.ex.tong.ui.fragment.TongSegment
        android:id="@+id/segment_group"
        android:layout_width="match_parent"
        android:layout_height="36dp"
        android:layout_marginTop="20dp"
        android:checkedButton="@+id/button_mygroup"
        android:gravity="center"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/button_mygroup"
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:button="@null"
            android:gravity="center"
            android:text="@string/title_mygroup"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@color/radio_colors" />

        <RadioButton
            android:id="@+id/button_group"
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:button="@null"
            android:gravity="center"
            android:text="@string/title_groups"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@color/radio_colors" />


    </com.neighbor.ex.tong.ui.fragment.TongSegment>

    <ViewSwitcher
        android:id="@+id/group_switcher"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/relativeLayout"
        android:layout_below="@id/segment_group"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ListView
                android:id="@id/android:list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@id/android:empty"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:gravity="center_vertical|center_horizontal"
                android:text="@string/title_no_group"
                android:textColor="@android:color/black"
                android:textSize="18sp" />

        </LinearLayout>

        <ListView
            android:id="@+id/total_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />


    </ViewSwitcher>

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:background="@color/colorPrimary">

        <ImageButton
            android:id="@+id/make_group"
            android:layout_width="46dp"
            android:layout_height="46dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="30dp"
            android:background="@null"
            android:scaleType="fitXY"
            android:src="@drawable/make_group_selector" />

    </RelativeLayout>

</RelativeLayout>
